Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.0
-
None
-
win xp 64 bit
msvc 2010
Description
The configure.exe does offer the option -mp which is apparently not used.
Turning off MP didnt work. The configure command seems to ignore -mp or -no-mp switch anyway. I had to change the QMAKE_CFLAGS_MP in E:\build\shared_qt-4.8.0-x86\mkspecs\win32-msvc-2010\qmake.conf
The libraries were at least built before crash as mentioned.
See also this post http://developer.qt.nokia.com/forums/viewthread/13867/#72959