Windows configure: make -mp affect the Qt build itself

Before -mp and -no-mp affected only projects built with Qt.
There was no way to turn off msvc_mp for the Qt build.
Qt projects can add msvc_mp themselves.

Task-number: QTBUG-23929
Change-Id: I2f9f038ae64acec545fcd038842bba92a8736af4
(cherry picked from commit 41a5ca35591a735d9f07e2335d5827763d52c1f4)
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@nokia.com>